# fpasoterm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SESSION.md  package-lock.json  package.json
.github/workflows/: check.yml  release.yml  security.yml
docs/: config.en.md  config.ja.md  fpasoterm-plugin.d.ts  known-issues.en.md  known-issues.ja.md  pr-review.en.md  pr-review.ja.md  release-checklist.en.md  release-checklist.ja.md  spec.en.md  spec.ja.md  sync.en.md  sync.ja.md  temporary-web-console.en.md  temporary-web-console.ja.md
examples/: apply-default-appearance.bat  apply-default-appearance.ps1  apply-default-appearance.sh  apply-runtime-appearance.bat  apply-runtime-appearance.ps1  apply-runtime-appearance.sh
examples/config/: default-appearance.toml  minimal.toml  runtime-appearance.toml  sync-folder.toml  web-console.toml  with-plugins.toml
examples/plugins/: hello.ts  theme.ts
extra/linux/: io.github.oyoguhito.FpasoTerm.desktop  io.github.oyoguhito.fpasoterm.desktop
extra/macos/: fpasoterm.icns
scripts/: build-artifacts.js  generate-icon.js  init-jj-empty-main  install-linux-desktop.js  run  uninstall-desktop.js  uninstall-linux-desktop.js  uninstall-windows-path.js
scripts/security/: scan-secrets.js
scripts/tests/: smoke.js
src/: config.js  main.js  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/renderer/: index.html  renderer.js  styles.css
