[package]
name = "fpasoterm"
version = "1.3.0"
description = "Cross-platform terminal with Japanese IME support."
authors = ["oyoguhito"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
portable-pty = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.2", features = ["macos-private-api"] }
toml = "0.9.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console"] }
